Adding user documentation
